<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nestedScrollView"
    android:background="@color/colorPrimaryDark"
    android:padding="20dp"
    tools:context=".activities.LoginActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:maxWidth="200dp"
            android:maxHeight="200dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@drawable/doglogo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_name"
                android:textColorHint="@color/colorText"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorText"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_email"
                android:textColorHint="@color/colorText"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorText"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_password"
                android:textColorHint="@color/colorText"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorText"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_confirm_password"
                android:textColorHint="@color/colorText"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorText"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColor="@color/colorText"
            android:background="@color/colorTextHint"
            android:text="@string/text_register"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/appCompatTextViewLoginLink"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/text_login"
            android:textSize="16sp"
            android:textColor="@color/colorText"/>

    </android.support.v7.widget.LinearLayoutCompat>

    <!--<EditText-->
        <!--android:id="@+id/etName"-->
        <!--android:layout_width="383dp"-->
        <!--android:layout_height="0dp"-->
        <!--android:ems="10"-->
        <!--android:hint="Name"-->
        <!--android:inputType="textPersonName"-->
        <!--tools:layout_constraintTop_creator="1"-->
        <!--tools:layout_constraintRight_creator="1"-->
        <!--tools:layout_constraintBottom_creator="1"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/etUsername"-->
        <!--android:layout_marginStart="14dp"-->
        <!--android:layout_marginEnd="14dp"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--android:layout_marginTop="16dp"-->
        <!--tools:layout_constraintLeft_creator="1"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--android:layout_marginLeft="15dp"-->
        <!--android:layout_marginRight="15dp"-->
        <!--app:layout_constraintHorizontal_bias="0.0"-->
        <!--app:layout_constraintVertical_bias="1.0" />-->

    <!--<EditText-->
        <!--android:id="@+id/etUsername"-->
        <!--android:layout_width="383dp"-->
        <!--android:layout_height="46dp"-->
        <!--android:ems="10"-->
        <!--android:hint="Username"-->
        <!--android:inputType="textPersonName"-->
        <!--tools:layout_constraintTop_creator="1"-->
        <!--tools:layout_constraintRight_creator="1"-->
        <!--android:layout_marginStart="14dp"-->
        <!--android:layout_marginEnd="14dp"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--android:layout_marginTop="58dp"-->
        <!--tools:layout_constraintLeft_creator="1"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--android:layout_marginLeft="14dp"-->
        <!--android:layout_marginRight="14dp" />-->

    <!--<EditText-->
        <!--android:id="@+id/etPassword"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="44dp"-->
        <!--android:ems="10"-->
        <!--android:hint="Password"-->
        <!--android:inputType="textPassword"-->
        <!--tools:layout_constraintTop_creator="1"-->
        <!--tools:layout_constraintRight_creator="1"-->
        <!--app:layout_constraintRight_toRightOf="@+id/etUsername"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/etUsername"-->
        <!--tools:layout_constraintLeft_creator="1"-->
        <!--app:layout_constraintLeft_toLeftOf="@+id/etUsername" />-->

    <!--<EditText-->
        <!--android:id="@+id/etAge"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="42dp"-->
        <!--android:ems="10"-->
        <!--android:hint="Age"-->
        <!--android:inputType="number"-->
        <!--tools:layout_constraintTop_creator="1"-->
        <!--tools:layout_constraintRight_creator="1"-->
        <!--app:layout_constraintRight_toRightOf="@+id/etPassword"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/etPassword"-->
        <!--tools:layout_constraintLeft_creator="1"-->
        <!--app:layout_constraintLeft_toLeftOf="@+id/etPassword" />-->

    <!--<Button-->
        <!--android:id="@+id/bRegister"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="48dp"-->
        <!--android:text="Register"-->
        <!--tools:layout_constraintTop_creator="1"-->
        <!--tools:layout_constraintRight_creator="1"-->
        <!--app:layout_constraintRight_toRightOf="@+id/etAge"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/etAge"-->
        <!--tools:layout_constraintLeft_creator="1"-->
        <!--app:layout_constraintLeft_toLeftOf="@+id/etAge" />-->

</android.support.v4.widget.NestedScrollView>
